--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
