--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
